--- a/index.html
+++ b/index.html
@@ -117,17 +117,13 @@
                 </div>
             </div>
             <div class="col-lg-4">
-<!--                 <div class="card c3">
+                 <div class="card c3">
                     <div class="card-body">
                         <img src="p6.jpg" alt="" class="photo">
                         <h5 class="card-title">Calculator</h5>
                         <a href="https://asheeshk210.github.io/calculator/" class="btn btn-primary">Preview</a>
-                    </div> -->
-                 <div class="pbox">
-                    <img src="p6.jpg" alt="" class="photo">
-                    <h5>calculator</h5>
-                    <a href="https://asheeshk210.github.io/calculator/" class="btn btn-success">Preview</a>
-                </div>
+                    </div> 
+               
                 </div>
             </div>
 
