--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="col-lg-4">
                 <div class="card c1">
                     <div class="card-body">
-                        <img src="p1.JPEG" alt="" class="photo">
+                        <img src="firstimg.JPG" alt="" class="photo">
                         <h5 class="card-title">Tin Dog</h5>
                         <a href="https://asheeshk210.github.io/tindog/" class="btn btn-primary">Preview</a>
                     </div>
