--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-lg-4">
                 <div class="card c2">
                     <div class="card-body">
-                        <img src="p2.jpg" alt="" class="photo">
+                        <img src="second.jpg" alt="" class="photo">
                         <h5 class="card-title">Todo List</h5>
                         <a href="https://asheeshk210.github.io/todolist/" class="btn btn-primary">Preview</a>
                     </div>
@@ -89,7 +89,7 @@
             <div class="col-lg-4">
                 <div class="card c3">
                     <div class="card-body">
-                        <img src="p3.jpg" alt="" class="photo">
+                        <img src="thirdimg.JPG" alt="" class="photo">
                         <h5 class="card-title">Weather App</h5>
                         <a href="https://asheeshk210.github.io/weather-app/" class="btn btn-primary">Preview</a>
                     </div>
@@ -101,7 +101,7 @@
             <div class="col-lg-4">
                 <div class="card c1">
                     <div class="card-body">
-                        <img src="p4.jpg" alt="" class="photo">
+                        <img src="fourthimg.JPG" alt="" class="photo">
                         <h5 class="card-title">Analog Clock</h5>
                         <a href="https://asheeshk210.github.io/clock/" class="btn btn-primary">Preview</a>
                     </div>
@@ -110,7 +110,7 @@
             <div class="col-lg-4">
                 <div class="card c2">
                     <div class="card-body">
-                        <img src="p5.jpg" alt="" class="photo">
+                        <img src="fifthimg.JPG" alt="" class="photo">
                         <h5 class="card-title">Digital Clock</h5>
                         <a href="https://asheeshk210.github.io/digital_clock/" class="btn btn-primary">Preview</a>
                     </div>
@@ -119,7 +119,7 @@
             <div class="col-lg-4">
                  <div class="card c3">
                     <div class="card-body">
-                        <img src="p6.jpg" alt="" class="photo">
+                        <img src="sixthimg.JPG" alt="" class="photo">
                         <h5 class="card-title">Calculator</h5>
                         <a href="https://asheeshk210.github.io/calculator/" class="btn btn-primary">Preview</a>
                     </div> 
