--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-lg-4">
                 <div class="card c2">
                     <div class="card-body">
-                        <img src="secondimg.jpg" alt="" class="photo">
+                        <img src="secondimg.JPG" alt="" class="photo">
                         <h5 class="card-title">Todo List</h5>
                         <a href="https://asheeshk210.github.io/todolist/" class="btn btn-primary">Preview</a>
                     </div>
